Add "evaluateExpression" bulk action
Now we can evaluate arbitrary expressions from within bulk actions.

Work in progress:

1. Only single return values are supported.
2. Expression profile determination is not part of this commit.
Root authorization is therefore required for now.
3. Tests are quite rudimentary yet.